# golomb

./: .clang-format  .clang-tidy  .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  TESTING_GUIDE.md
.claude/: mcp.json.template  settings.local.json
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
benchmarks/: 20251026_191322_6c09b6e.json  20251028_001721_8c7e235.json  20251028_002356_f7db226.json  20251028_003749_e332b15.json  20251028_004610_1dbf5f1.json  20251028_005640_41997c0.json  20251028_010429_8f8273d.json  20251028_012200_539706b.json  20251028_191633_e9107ac.json  20251028_200033_c1900db.json  20251028_231202_b220d7e.json  20251028_232623_fc0a507.json  20251029_000305_9f76892.json  20251029_001736_f3fc967.json  20251029_002656_8491e1f.json  20251029_003326_cd852d4.json  20251029_004041_2ee6a4b.json  20251029_004831_60079fa.json  20251029_005454_6e8b1c5.json  20251029_010412_93852e6.json  20251029_014810_7de1da3.json  20251029_015555_1cab3be.json  20251029_015906_774fc30.json  20251029_134059_6c3c562.json  20251029_140046_85a8f8e.json  20251029_143602_0cfe59b.json  20251029_175853_8d62f94.json  20251029_221422_b91996d.json  20251029_223002_de013e1.json  20251029_223903_66503e7.json  20251029_224423_05cdec3.json  20251029_233155_2603043.json  20251030_000610_84930f2.json  20251030_002723_ac3df3d.json  CMakeLists.txt  bench_build_partial_rule.cpp
cmake/: CPM.cmake
docs/: ARCHITECTURE.md  MCP_GUIDE.md  OPTIMIZATIONS.md  PERFORMANCE.md
examples/: CMakeLists.txt  README.md  demo_nn_mcts.cpp
include/cli/: args.hpp
include/core/: bitset_dist.hpp  golomb.hpp
include/exact/: exact_iface.hpp
include/heuristics/: evo.hpp  local_search.hpp
include/mcts/: mcts.hpp  node_pool.hpp
include/nn/: activations.hpp  golomb_net.hpp  layer.hpp  linear.hpp  optimizer.hpp  state_encoder.hpp  tensor.hpp
include/training/: self_play.hpp  trainer.hpp
include/utils/: mutations.hpp  random.hpp
scripts/: build.sh  compare_benchmarks.py  format.sh  run_tests.sh
src/cli/: main.cpp
src/core/: bitset_dist.cpp  golomb.cpp
src/exact/: exact_cpsat.cpp  exact_stub.cpp
src/heuristics/: evo.cpp  local_search.cpp
src/mcts/: mcts.cpp  node_pool.cpp
src/nn/: activations.cpp  golomb_net.cpp  linear.cpp  optimizer.cpp  state_encoder.cpp  tensor.cpp
src/training/: self_play.cpp  trainer.cpp
src/utils/: mutations.cpp  random.cpp
tests/: CMakeLists.txt  test_exact_cpsat.cpp  test_golomb_core.cpp  test_nn_activations.cpp  test_nn_golomb_net.cpp  test_nn_linear.cpp  test_nn_state_encoder.cpp  test_nn_tensor.cpp
